2010-06-03  Araki Ken  <arakiken@users.sf.net>

	* x_font.c: Returned value of get_cs_info() is checked.

	* x_screen.c:
	  Modifier keys with Del/Home/End are distinguished.
	  The keypad middle key (XK_Begin, XK_KP_Begin) is mapped to ^[[E, ^[[1;5E etc.
	  (SF Bug #2818015, Thanks to Thomas Wolff)

	* x_screen.c: If Num_Lock is pressed, application keypad is ignored.
	
	* x_window.c: XK_Num_Lock is not ignored in XModifierKeymap by default.

2010-05-23  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, doc/ja/README.ja: Updated.

	* x_screen.c: The default value of button3_behavior option is changed
	  from "menu1" to "xterm".

	* x_screen.c: Release events for the wheel buttons are not reported.
	  (SF Bug #2818018, Thanks to Thomas Wolff)

2010-05-22  Araki Ken  <arakiken@users.sf.net>

	* xwindow/version.h.in: 3.0.0 post -> 3.0.1 pre

	* mc_flags.c: "Ambiguouswidth = fullwidth (UTF8 only)" checkbox
	  is added for "col_size_of_width_a" option.
	  
	* x_screen.c: "col_size_of_width_a" option is added to configuration protocol.

	* x_screen.c: Screen is redrawn in selection_cleared().

2010-05-19  Araki Ken  <arakiken@users.sf.net>

	* Performance of 256colors2.pl(1999/07/11 version) is improved by reducing
	  number of redrawing screen in "\x1b]4;%d;rgb:..." seqeunce. (Thanks to
	  Konosuke Watanabe san.)
	  (set_{font|color}_config in x_term_manager.c are moved to x_screen.c, and
	  {font|color}_updated which are called from stop_vt100_cmd() in x_screen.c
	  are added to x_term_manager.c.)

2010-05-08  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: "ESC[9Nm" and "ESC[10Nm" sequences are supported.

	* x_color_cache.c: get_cached_vtsys_xcolor() returns colors compatible
	  with xterm.

	* x_screen.c: Even if screen is not selection owner, "selected_text"
	  protocol returns former value.

2010-05-05  Araki Ken  <arakiken@users.sf.net>

	* --button3/button3_behavior option is added.